@@ -1,5 +1,6 @@
 package com.sequenceiq.cloudbreak.service.cluster;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
@@ -16,8 +17,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -25,6 +25,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -37,20 +38,27 @@ import com.sequenceiq.cloudbreak.api.endpoint.v4.stacks.request.HostGroupAdjustm
 import com.sequenceiq.cloudbreak.api.endpoint.v4.stacks.request.StackAddVolumesRequest;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.stacks.request.StackDeleteVolumesRequest;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.stacks.request.UpdateClusterV4Request;
+import com.sequenceiq.cloudbreak.cloud.model.ClouderaManagerProduct;
 import com.sequenceiq.cloudbreak.cluster.service.ClusterComponentConfigProvider;
+import com.sequenceiq.cloudbreak.cmtemplate.CmTemplateValidator;
 import com.sequenceiq.cloudbreak.common.exception.BadRequestException;
 import com.sequenceiq.cloudbreak.common.exception.NotFoundException;
-import com.sequenceiq.cloudbreak.common.json.Json;
+import com.sequenceiq.cloudbreak.domain.Blueprint;
 import com.sequenceiq.cloudbreak.domain.stack.Stack;
 import com.sequenceiq.cloudbreak.domain.stack.cluster.Cluster;
 import com.sequenceiq.cloudbreak.domain.stack.instance.InstanceGroup;
 import com.sequenceiq.cloudbreak.domain.stack.instance.InstanceMetaData;
 import com.sequenceiq.cloudbreak.dto.StackDto;
 import com.sequenceiq.cloudbreak.service.ClusterCommonService;
+import com.sequenceiq.cloudbreak.service.blueprint.BlueprintService;
 import com.sequenceiq.cloudbreak.service.cluster.flow.ClusterOperationService;
 import com.sequenceiq.cloudbreak.service.environment.EnvironmentService;
+import com.sequenceiq.cloudbreak.service.hostgroup.HostGroupService;
+import com.sequenceiq.cloudbreak.service.stack.InstanceGroupService;
 import com.sequenceiq.cloudbreak.service.stack.InstanceMetaDataService;
 import com.sequenceiq.cloudbreak.service.stack.StackDtoService;
+import com.sequenceiq.cloudbreak.service.stack.flow.UpdateNodeCountValidator;
+import com.sequenceiq.cloudbreak.view.ClusterView;
 import com.sequenceiq.cloudbreak.view.StackView;
 import com.sequenceiq.environment.api.v1.environment.model.response.EnvironmentStatus;
 import com.sequenceiq.flow.api.model.FlowIdentifier;
@@ -61,11 +69,17 @@ public class ClusterCommonServiceTest {
 
     private static final String ACCOUNT_ID = "accountId";
 
-    private static final String COMPONENT_NAME = "COMPONENT_NAME";
-
-    private static final Json ATTRIBUTE_JSON = new Json(Map.of("preparedImages", List.of("image-id")));
-
     private static final long STACK_ID = 1L;
+
+    private static final String HOST_GROUP_NAME_WORKER = "worker";
+
+    private static final long CLUSTER_ID = 2L;
+
+    private static final String STACK_CRN = String.format("crn:cdp:datahub:us-west-1:%s:cluster:cluster", ACCOUNT_ID);
+
+    private static final int SCALING_ADJUSTMENT = 5;
+
+    private static final String STACK_NAME = "stackName";
 
     @InjectMocks
     private ClusterCommonService underTest;
@@ -88,8 +102,38 @@ public class ClusterCommonServiceTest {
     @Mock
     private ClusterService clusterService;
 
+    @Mock
+    private HostGroupService hostGroupService;
+
+    @Mock
+    private CmTemplateValidator cmTemplateValidator;
+
+    @Mock
+    private BlueprintService blueprintService;
+
+    @Mock
+    private UpdateNodeCountValidator updateNodeCountValidator;
+
+    @Mock
+    private InstanceGroupService instanceGroupService;
+
+    @Mock
+    private StackDto stackDto;
+
+    @Mock
+    private StackView stackView;
+
+    @Mock
+    private ClusterView clusterView;
+
+    private Blueprint blueprint;
+
+    private FlowIdentifier flowIdentifier;
+
     @BeforeEach
     public void setUp() {
+        blueprint = new Blueprint();
+        flowIdentifier = new FlowIdentifier(FlowType.FLOW, "1");
     }
 
     @Test
@@ -114,7 +158,7 @@ public class ClusterCommonServiceTest {
         when(stack.isAvailable()).thenReturn(true);
 
         CertificatesRotationV4Request certificatesRotationV4Request = new CertificatesRotationV4Request();
-        when(clusterOperationService.rotateAutoTlsCertificates(STACK_ID, certificatesRotationV4Request)).thenReturn(new FlowIdentifier(FlowType.FLOW, "1"));
+        when(clusterOperationService.rotateAutoTlsCertificates(STACK_ID, certificatesRotationV4Request)).thenReturn(flowIdentifier);
         when(stackDtoService.getStackViewByNameOrCrn(nameOrCrn, ACCOUNT_ID)).thenReturn(stack);
         underTest.rotateAutoTlsCertificates(nameOrCrn, ACCOUNT_ID, certificatesRotationV4Request);
         verify(clusterOperationService, times(1)).rotateAutoTlsCertificates(STACK_ID, certificatesRotationV4Request);
@@ -152,28 +196,30 @@ public class ClusterCommonServiceTest {
         String result = underTest.getHostNamesAsIniString(stack, "cloudbreak");
         // THEN
 
-        assertEquals("[cluster]\n" +
-                "name=cl1\n" +
-                "\n" +
-                "[server]\n" +
-                "gatewayIP\n" +
-                "\n" +
-                "[worker]\n" +
-                "worker-1\n" +
-                "pub-worker-2\n" +
-                "\n" +
-                "[master]\n" +
-                "m1\n" +
-                "\n" +
-                "[agent]\n" +
-                "m1\n" +
-                "worker-1\n" +
-                "pub-worker-2\n" +
-                "\n" +
-                "[all:vars]\n" +
-                "ansible_ssh_user=cloudbreak\n" +
-                "ansible_ssh_common_args='-o StrictHostKeyChecking=no'\n" +
-                "ansible_become=yes\n", result);
+        assertEquals("""
+                [cluster]
+                name=cl1
+
+                [server]
+                gatewayIP
+
+                [worker]
+                worker-1
+                pub-worker-2
+
+                [master]
+                m1
+
+                [agent]
+                m1
+                worker-1
+                pub-worker-2
+
+                [all:vars]
+                ansible_ssh_user=cloudbreak
+                ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+                ansible_become=yes
+                """, result);
     }
 
     @Test
@@ -197,7 +243,7 @@ public class ClusterCommonServiceTest {
         InstanceGroup master = new InstanceGroup();
         master.setGroupName("master");
         InstanceGroup worker = new InstanceGroup();
-        worker.setGroupName("worker");
+        worker.setGroupName(HOST_GROUP_NAME_WORKER);
 
         InstanceMetaData master1 = new InstanceMetaData();
         master1.setPublicIp("m1");
@@ -205,7 +251,7 @@ public class ClusterCommonServiceTest {
         master1.setInstanceStatus(InstanceStatus.SERVICES_HEALTHY);
         instanceMetaData.add(master1);
 
-        master.setInstanceMetaData(new HashSet<>(Arrays.asList(master1)));
+        master.setInstanceMetaData(Set.of(master1));
 
         InstanceMetaData worker1 = new InstanceMetaData();
         worker1.setPrivateIp("worker-1");
@@ -247,7 +293,7 @@ public class ClusterCommonServiceTest {
         when(stack.getStatus()).thenReturn(Status.AVAILABLE);
         when(stack.getId()).thenReturn(STACK_ID);
         when(stackDtoService.getStackViewByNameOrCrn(nameOrCrn, ACCOUNT_ID)).thenReturn(stack);
-        when(clusterOperationService.updateSalt(STACK_ID)).thenReturn(new FlowIdentifier(FlowType.FLOW, "1"));
+        when(clusterOperationService.updateSalt(STACK_ID)).thenReturn(flowIdentifier);
 
         FlowIdentifier flowIdentifier = underTest.updateSalt(nameOrCrn, ACCOUNT_ID);
 
@@ -280,7 +326,7 @@ public class ClusterCommonServiceTest {
         StackDto stack = mock(StackDto.class);
         when(stack.getId()).thenReturn(STACK_ID);
         when(stackDtoService.getByCrn(eq("CRN"))).thenReturn(stack);
-        when(clusterOperationService.deleteVolumes(STACK_ID, stackDeleteVolumesRequest)).thenReturn(new FlowIdentifier(FlowType.FLOW, "1"));
+        when(clusterOperationService.deleteVolumes(STACK_ID, stackDeleteVolumesRequest)).thenReturn(flowIdentifier);
 
         FlowIdentifier flowIdentifier = underTest.putDeleteVolumes("CRN", stackDeleteVolumesRequest);
 
@@ -310,7 +356,7 @@ public class ClusterCommonServiceTest {
         StackDto stack = mock(StackDto.class);
         when(stack.getId()).thenReturn(STACK_ID);
         when(stackDtoService.getByCrn(eq("CRN"))).thenReturn(stack);
-        when(clusterOperationService.addVolumes(STACK_ID, stackAddVolumesRequest)).thenReturn(new FlowIdentifier(FlowType.FLOW, "1"));
+        when(clusterOperationService.addVolumes(STACK_ID, stackAddVolumesRequest)).thenReturn(flowIdentifier);
 
         FlowIdentifier flowIdentifier = underTest.putAddVolumes("CRN", stackAddVolumesRequest);
 
@@ -328,4 +374,195 @@ public class ClusterCommonServiceTest {
 
         assertEquals("Invalid update cluster request!", exception.getMessage());
     }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    void putTestWhenHostGroupAdjustmentAndAvailable(boolean clouderaManagerTemplate) {
+        when(stackDto.getId()).thenReturn(STACK_ID);
+        when(stackDto.getStack()).thenReturn(stackView);
+        when(stackDto.isAvailable()).thenReturn(true);
+        when(stackDto.getBlueprint()).thenReturn(blueprint);
+        when(stackDto.getCluster()).thenReturn(clusterView);
+        when(clusterView.getId()).thenReturn(CLUSTER_ID);
+        when(hostGroupService.hasHostGroupInCluster(CLUSTER_ID, HOST_GROUP_NAME_WORKER)).thenReturn(true);
+        when(blueprintService.isClouderaManagerTemplate(blueprint)).thenReturn(clouderaManagerTemplate);
+        Optional<ClouderaManagerProduct> cdhProduct = Optional.empty();
+        Set<InstanceGroup> instanceGroups = Set.of();
+        if (clouderaManagerTemplate) {
+            when(stackDto.getResourceCrn()).thenReturn(STACK_CRN);
+            when(clusterComponentConfigProvider.getNormalizedCdhProductWithNormalizedVersion(CLUSTER_ID)).thenReturn(cdhProduct);
+            when(instanceGroupService.findNotTerminatedByStackId(STACK_ID)).thenReturn(instanceGroups);
+        }
+
+        UpdateClusterV4Request updateJson = new UpdateClusterV4Request();
+        HostGroupAdjustmentV4Request hostGroupAdjustmentV4Request = new HostGroupAdjustmentV4Request();
+        updateJson.setHostGroupAdjustment(hostGroupAdjustmentV4Request);
+        hostGroupAdjustmentV4Request.setHostGroup(HOST_GROUP_NAME_WORKER);
+        hostGroupAdjustmentV4Request.setScalingAdjustment(SCALING_ADJUSTMENT);
+
+        when(clusterOperationService.updateHosts(STACK_ID, hostGroupAdjustmentV4Request)).thenReturn(flowIdentifier);
+
+        FlowIdentifier flowIdentifierResult = underTest.put(stackDto, updateJson);
+
+        assertThat(flowIdentifierResult).isEqualTo(flowIdentifier);
+
+        verify(environmentService).checkEnvironmentStatus(stackView, EnvironmentStatus.upscalable());
+        verify(updateNodeCountValidator).validateScalabilityOfInstanceGroup(stackDto, hostGroupAdjustmentV4Request);
+        if (clouderaManagerTemplate) {
+            verify(cmTemplateValidator).validateHostGroupScalingRequest(
+                    ACCOUNT_ID,
+                    blueprint,
+                    cdhProduct,
+                    HOST_GROUP_NAME_WORKER,
+                    SCALING_ADJUSTMENT,
+                    instanceGroups,
+                    false);
+        } else {
+            verifyNoInteractions(cmTemplateValidator);
+        }
+    }
+
+    @Test
+    void putTestWhenHostGroupAdjustmentAndNodeFailure() {
+        when(stackDto.getId()).thenReturn(STACK_ID);
+        when(stackDto.getStack()).thenReturn(stackView);
+        when(stackDto.isAvailable()).thenReturn(false);
+        when(stackView.hasNodeFailure()).thenReturn(true);
+        when(stackDto.getBlueprint()).thenReturn(blueprint);
+        when(stackDto.getCluster()).thenReturn(clusterView);
+        when(clusterView.getId()).thenReturn(CLUSTER_ID);
+        when(hostGroupService.hasHostGroupInCluster(CLUSTER_ID, HOST_GROUP_NAME_WORKER)).thenReturn(true);
+        when(blueprintService.isClouderaManagerTemplate(blueprint)).thenReturn(true);
+        when(stackDto.getResourceCrn()).thenReturn(STACK_CRN);
+        Optional<ClouderaManagerProduct> cdhProduct = Optional.empty();
+        when(clusterComponentConfigProvider.getNormalizedCdhProductWithNormalizedVersion(CLUSTER_ID)).thenReturn(cdhProduct);
+        Set<InstanceGroup> instanceGroups = Set.of();
+        when(instanceGroupService.findNotTerminatedByStackId(STACK_ID)).thenReturn(instanceGroups);
+
+        UpdateClusterV4Request updateJson = new UpdateClusterV4Request();
+        HostGroupAdjustmentV4Request hostGroupAdjustmentV4Request = new HostGroupAdjustmentV4Request();
+        updateJson.setHostGroupAdjustment(hostGroupAdjustmentV4Request);
+        hostGroupAdjustmentV4Request.setHostGroup(HOST_GROUP_NAME_WORKER);
+        hostGroupAdjustmentV4Request.setScalingAdjustment(SCALING_ADJUSTMENT);
+
+        when(clusterOperationService.updateHosts(STACK_ID, hostGroupAdjustmentV4Request)).thenReturn(flowIdentifier);
+
+        FlowIdentifier flowIdentifierResult = underTest.put(stackDto, updateJson);
+
+        assertThat(flowIdentifierResult).isEqualTo(flowIdentifier);
+
+        verify(environmentService).checkEnvironmentStatus(stackView, EnvironmentStatus.upscalable());
+        verify(updateNodeCountValidator).validateScalabilityOfInstanceGroup(stackDto, hostGroupAdjustmentV4Request);
+        verify(cmTemplateValidator).validateHostGroupScalingRequest(
+                ACCOUNT_ID,
+                blueprint,
+                cdhProduct,
+                HOST_GROUP_NAME_WORKER,
+                SCALING_ADJUSTMENT,
+                instanceGroups,
+                false);
+    }
+
+    @Test
+    void putTestWhenHostGroupAdjustmentAndBadStackStatus() {
+        when(stackDto.getId()).thenReturn(STACK_ID);
+        when(stackDto.getStack()).thenReturn(stackView);
+        when(stackDto.isAvailable()).thenReturn(false);
+        when(stackView.hasNodeFailure()).thenReturn(false);
+        when(stackDto.getStatus()).thenReturn(Status.CREATE_FAILED);
+
+        UpdateClusterV4Request updateJson = new UpdateClusterV4Request();
+        HostGroupAdjustmentV4Request hostGroupAdjustmentV4Request = new HostGroupAdjustmentV4Request();
+        updateJson.setHostGroupAdjustment(hostGroupAdjustmentV4Request);
+        hostGroupAdjustmentV4Request.setHostGroup(HOST_GROUP_NAME_WORKER);
+        hostGroupAdjustmentV4Request.setScalingAdjustment(SCALING_ADJUSTMENT);
+
+        BadRequestException badRequestException = assertThrows(BadRequestException.class, () -> underTest.put(stackDto, updateJson));
+
+        assertThat(badRequestException.getMessage()).isEqualTo(String.format(
+                "Stack '%s' is currently in '%s' status. Cluster scale can only be made " +
+                        "if the underlying stack status is 'AVAILABLE' or 'NODE_FAILURE'.", STACK_ID, Status.CREATE_FAILED));
+
+        verify(environmentService).checkEnvironmentStatus(stackView, EnvironmentStatus.upscalable());
+        verifyNoInteractions(updateNodeCountValidator);
+        verifyNoInteractions(cmTemplateValidator);
+        verifyNoInteractions(clusterOperationService);
+    }
+
+    @Test
+    void putTestWhenHostGroupAdjustmentAndHostGroupNotFound() {
+        when(stackDto.getId()).thenReturn(STACK_ID);
+        when(stackDto.getStack()).thenReturn(stackView);
+        when(stackDto.isAvailable()).thenReturn(true);
+        when(stackDto.getBlueprint()).thenReturn(blueprint);
+        when(stackDto.getCluster()).thenReturn(clusterView);
+        when(clusterView.getId()).thenReturn(CLUSTER_ID);
+        when(hostGroupService.hasHostGroupInCluster(CLUSTER_ID, HOST_GROUP_NAME_WORKER)).thenReturn(false);
+        when(stackDto.getName()).thenReturn(STACK_NAME);
+
+        UpdateClusterV4Request updateJson = new UpdateClusterV4Request();
+        HostGroupAdjustmentV4Request hostGroupAdjustmentV4Request = new HostGroupAdjustmentV4Request();
+        updateJson.setHostGroupAdjustment(hostGroupAdjustmentV4Request);
+        hostGroupAdjustmentV4Request.setHostGroup(HOST_GROUP_NAME_WORKER);
+        hostGroupAdjustmentV4Request.setScalingAdjustment(SCALING_ADJUSTMENT);
+
+        BadRequestException badRequestException = assertThrows(BadRequestException.class, () -> underTest.put(stackDto, updateJson));
+
+        assertThat(badRequestException.getMessage()).isEqualTo(String.format(
+                "Host group '%s' not found or not member of the cluster '%s'", HOST_GROUP_NAME_WORKER, STACK_NAME));
+
+        verify(environmentService).checkEnvironmentStatus(stackView, EnvironmentStatus.upscalable());
+        verifyNoInteractions(updateNodeCountValidator);
+        verifyNoInteractions(cmTemplateValidator);
+        verifyNoInteractions(clusterOperationService);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {true, false})
+    void putTestWhenCrnAndHostGroupAdjustmentAndAvailable(boolean clouderaManagerTemplate) {
+        when(stackDtoService.getByCrn(STACK_CRN)).thenReturn(stackDto);
+        when(stackDto.getId()).thenReturn(STACK_ID);
+        when(stackDto.getStack()).thenReturn(stackView);
+        when(stackDto.isAvailable()).thenReturn(true);
+        when(stackDto.getBlueprint()).thenReturn(blueprint);
+        when(stackDto.getCluster()).thenReturn(clusterView);
+        when(clusterView.getId()).thenReturn(CLUSTER_ID);
+        when(hostGroupService.hasHostGroupInCluster(CLUSTER_ID, HOST_GROUP_NAME_WORKER)).thenReturn(true);
+        when(blueprintService.isClouderaManagerTemplate(blueprint)).thenReturn(clouderaManagerTemplate);
+        Optional<ClouderaManagerProduct> cdhProduct = Optional.empty();
+        Set<InstanceGroup> instanceGroups = Set.of();
+        if (clouderaManagerTemplate) {
+            when(stackDto.getResourceCrn()).thenReturn(STACK_CRN);
+            when(clusterComponentConfigProvider.getNormalizedCdhProductWithNormalizedVersion(CLUSTER_ID)).thenReturn(cdhProduct);
+            when(instanceGroupService.findNotTerminatedByStackId(STACK_ID)).thenReturn(instanceGroups);
+        }
+
+        UpdateClusterV4Request updateJson = new UpdateClusterV4Request();
+        HostGroupAdjustmentV4Request hostGroupAdjustmentV4Request = new HostGroupAdjustmentV4Request();
+        updateJson.setHostGroupAdjustment(hostGroupAdjustmentV4Request);
+        hostGroupAdjustmentV4Request.setHostGroup(HOST_GROUP_NAME_WORKER);
+        hostGroupAdjustmentV4Request.setScalingAdjustment(SCALING_ADJUSTMENT);
+
+        when(clusterOperationService.updateHosts(STACK_ID, hostGroupAdjustmentV4Request)).thenReturn(flowIdentifier);
+
+        FlowIdentifier flowIdentifierResult = underTest.put(STACK_CRN, updateJson);
+
+        assertThat(flowIdentifierResult).isEqualTo(flowIdentifier);
+
+        verify(environmentService).checkEnvironmentStatus(stackView, EnvironmentStatus.upscalable());
+        verify(updateNodeCountValidator).validateScalabilityOfInstanceGroup(stackDto, hostGroupAdjustmentV4Request);
+        if (clouderaManagerTemplate) {
+            verify(cmTemplateValidator).validateHostGroupScalingRequest(
+                    ACCOUNT_ID,
+                    blueprint,
+                    cdhProduct,
+                    HOST_GROUP_NAME_WORKER,
+                    SCALING_ADJUSTMENT,
+                    instanceGroups,
+                    false);
+        } else {
+            verifyNoInteractions(cmTemplateValidator);
+        }
+    }
+
 }
